[metadata]
name = great_expectations

[options]
packages =
    great_expectations
install_requires =
    black==21.9b0
    great_expectations==0.13.35
    sqlalchemy==1.4.25
    psycopg2==2.9.1
    python-dotenv==0.19.0
    pyarrow==5.0.0
    fastparquet==0.7.1
python_requires = >=3.6
package_dir = 
    =src
zip_safe = no

[options.extras_require]
testing = 
    flake8==3.9.2
    mypy==0.910
    pytest==6.2.5
    pytest-cov==2.12.1
    tox==3.24.4
    tox-gh-actions==2.8.1

[options.package_data]
great_expectations = py.typed

[flake8]
max-line-length = 160
